[package]
name = "DHRustHttp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
tokio-util = "0.7"
is_elevated = "0.1"
runas = "1.0"
