[package]
name = "DHRustHttp"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full", "signal"] }
warp = "0.3"
mime_guess = "2.0"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
tokio-util = "0.7"
windows-sys = { version = "0.52", features = [
	"Win32_Foundation",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_Shell"
] }
ctrlc = "3.4"
